.Xmonad/xmonad.errors

xmonad.hs:459:8: error: Empty 'do' block
    |
459 | main = do
    |        ^^
